# Adversarial_Testing_Framework

./: .gitignore  GENERATOR_VERIFICATION.md  bottleneck_and_losses.md  framework.py  pyproject.toml
dataset/: loader.py
generator/: model.py  train.py  unet.py
main_model/: model.py  train.py  unet.py  unet_attention.py  unet_plusplus.py
train_eval/: summary.txt
utils/: gen_losses.py  metric.py  save.py  train_helper.py
visualisation/: train_vis.py
